Fixed font size on iPhone 5

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ html, body{
     width: 100%;
     height: 100%;
   }.connect{
-    font-size: 1em;
+    font-size: 0.9em;
   }
 }
 
